--- a/wrapper/gradle-wrapper.properties
+++ b/wrapper/gradle-wrapper.properties
@@ -1,8 +1,24 @@
-#Tue Sep 29 18:29:21 CEST 2009
+#
+# Copyright 2009 the original author or authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+#Wed Nov 18 15:48:45 EST 2009
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-distributionVersion=0.9-20091108161758+1100
+distributionVersion=0.9-20091118152522+1100
 zipStorePath=wrapper/dists
 urlRoot=http\://snapshots.dist.codehaus.org/gradle
 distributionName=gradle
