--- a/subprojects/gradle-docs/src/samples/userguide/files/inputFiles/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/files/inputFiles/build.gradle
@@ -1,37 +1,44 @@
 task compile(type: Compile)
 
 // START SNIPPET set-input-files
+// Use a File object to specify the source directory
 compile {
     source = file('src/main/java')
 }
 
+// Use a String path to specify the source directory
 compile {
     source = 'src/main/java'
 }
 
+// Use a collection to specify multiple source directories
 compile {
     source = ['src/main/java', '../shared/java']
 }
 
+// Use a FileCollection (or FileTree in this case) to specify the source files
 compile {
     source = fileTree(dir: 'src/main/java').matching { include 'org/gradle/api/**' }
 }
 
-compile {
-    source = zipTree('src/main.zip') + zipTree('src/test.zip')
-}
-
+// Using a closure to specify the source files.
 compile {
     source = {
-        fileTree(dir: 'src/main/java') + fileTree(dir: '../shared/java')
+        // Use the contents of each zip file in the src dir
+        file('src').listFiles().findAll {it.name.endsWith('.zip')}.collect { zipTree(it) }
     }
 }
 // END SNIPPET set-input-files
 
 // START SNIPPET add-input-files
 compile {
+    // Add some source directories use String paths
     source 'src/main/java', 'src/main/groovy'
+
+    // Add a source directory using a File object
     source file('../shared/java')
+
+    // Add some source directories using a closure
     source { file('src/test/').listFiles() }
 }
 // END SNIPPET add-input-files
