Improve logging of nested build execution (eg buildSrc): - Don't change the logging level when executing buildSrc builds - Changed TaskExecutionLogger to include a prefix when logging the execution of a task from a nested build - Added Gradle.getParent(), which returns the parent of the current build

--- a/subprojects/gradle-docs/src/samples/logging/init.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/init.gradle
@@ -1,3 +1,4 @@
+
 println 'init quiet out'
 captureStandardOutput(LogLevel.INFO)
 println 'init info out'
@@ -16,7 +17,7 @@ class CustomLogger extends BuildAdapter implements BuildListener, ProjectEvaluat
     }
 
     public void beforeEvaluate(Project project) {
-        logger.info('LOGGER: evaluating project')
+        logger.lifecycle("LOGGER: evaluating $project.path")
     }
 
     public void afterEvaluate(Project project, Throwable failure) {
@@ -24,7 +25,7 @@ class CustomLogger extends BuildAdapter implements BuildListener, ProjectEvaluat
     }
 
     public void beforeExecute(Task task) {
-        logger.info('LOGGER: executing task')
+        logger.lifecycle("LOGGER: executing $task.path")
     }
 
     public void afterExecute(Task task, TaskExecutionResult result) {
