GRADLE-708 - Use correct delegate for closures inside subprojects { } which are executed later. - Delegate to the task for task action closures, rather than to the project.

--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/pluginAccessConvention/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/pluginAccessConvention/build.gradle
@@ -6,6 +6,6 @@ task show << {
     println relativePath(project.sourceSets.main.classesDir)
 
     // Access the convention property via the convention object
-    println relativePath(convention.sourceSets.main.classesDir)
-    println relativePath(convention.plugins.java.sourceSets.main.classesDir)
+    println relativePath(project.convention.sourceSets.main.classesDir)
+    println relativePath(project.convention.plugins.java.sourceSets.main.classesDir)
 }
