GRADLE-362 - Some updates to the samples documentation

--- a/subprojects/gradle-docs/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/subprojects/gradle-docs/src/samples/groovy/multiproject/testproject/build.gradle
@@ -9,12 +9,18 @@ dependencies {
     testCompile 'junit:junit:4.7'
 }
 
-compileJava {
-    exclude '**/ExcludeJava.java'
+sourceSets {
+    main {
+        java {
+            exclude '**/ExcludeJava.java'
+        }
+        groovy {
+            exclude '**/ExcludeGroovy.groovy', '**/ExcludeGroovyJava.java'
+        }
+    }
 }
 
 compileGroovy {
-    exclude '**/ExcludeGroovy.groovy', '**/ExcludeGroovyJava.java'
     groovyOptions.fork(memoryMaximumSize: '128M')
 }
 
