Patch from John Murph.  Added the ability for scripts to register a listener for test execution feedback.  This currently works for JUnit.  However, TestNG support is disabled (although I had it working, so it's mostly correct).  This is due to a desire to not make Gradle have compile time dependencies on TestNG as that limits the versions of TestNG that can be used by projects.

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ libraries = [
     ]
 
 libraries.groovy_depends  = [libraries.groovy, libraries.ant, libraries.ant_launcher, libraries.asm_all,
-        libraries.antlr, libraries.commons_cli, libraries.ant_junit]
+        libraries.antlr, libraries.commons_cli, libraries.ant_junit, libraries.junit]
 
 allprojects {
     group = 'org.gradle'
