--- a/subprojects/gradle-plugins/plugins.gradle
+++ b/subprojects/gradle-plugins/plugins.gradle
@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 dependencies {
     groovy libraries.groovy_depends
 
@@ -9,7 +24,9 @@ dependencies {
             "org.apache.ivy:ivy:2.1.0-rc2@jar",
             "biz.aQute:bndlib:0.0.255@jar",
             "org.apache.mina:mina-core:2.0.0-M4",
-            libraries.junit
+            libraries.junit,
+            "dom4j:dom4j:1.6.1@jar",
+            "jaxen:jaxen:1.1@jar"
 
     runtime libraries.ant_junit
 
